--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/txv_username_login"
                 android:layout_width="300dp"
+                android:inputType="text"
                 android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
