--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -34,6 +34,7 @@
                 android:id="@+id/txv_name_register"
                 android:layout_width="300dp"
                 android:layout_height="30dp"
+                android:inputType="text"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/fondo_blanco"
