--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -29,7 +29,7 @@
 
     <item
         android:id="@+id/id_menubn_homenar"
-        android:title="@string/str_profile"
+        android:title="@string/str_home"
         android:icon="@drawable/home"
         app:showAsAction="ifRoom"/>
 
